--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@nativescript/core": "~8.4.0",
     "@nativescript/theme": "~3.0.2",
-    "nativescript-vue": "~2.9.2"
+    "nativescript-drop-down": "^6.0.2",
+    "nativescript-sqlite": "^2.8.6",
+    "nativescript-vue": "~2.9.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@nativescript/android": "8.3.1",
     "@nativescript/webpack": "~5.0.12",
     "nativescript-vue-template-compiler": "~2.9.2"
   }
